# subtractList

./: README.md  main.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-entrypoint.sh
example_files/: base-cleaned.txt  base.txt  sub.txt
liblog/: liblog.py
subtractlists/: subtractlists.py
